[gd_scene load_steps=19 format=3 uid="uid://bnpgytgqfajrs"]

[ext_resource type="Script" uid="uid://dexodb4rs5h2n" path="res://scripts/trivia/trivia_solitario.gd" id="1_mxdw0"]
[ext_resource type="Texture2D" uid="uid://cklobq7cnwd8p" path="res://assets/podio-escenario.png" id="2_hpyik"]
[ext_resource type="FontFile" uid="uid://r5e164404gbt" path="res://fonts/static/Nunito-Black.ttf" id="3_1pvm4"]
[ext_resource type="AudioStream" uid="uid://negcxorfx4db" path="res://assets/jajas.ogg" id="3_3sqw1"]
[ext_resource type="AudioStream" uid="uid://dybpy5nk8qjla" path="res://assets/trivia_song.ogg" id="4_012mi"]
[ext_resource type="AudioStream" uid="uid://bf5rpjky5g2pl" path="res://assets/Error.ogg" id="5_3sqw1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pvm4"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0.729412, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sqw1"]
bg_color = Color(0, 0.727768, 0.0893875, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ubjj7"]
bg_color = Color(0.223529, 0, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y30uc"]
bg_color = Color(0.223529, 0, 0.921569, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bt4b1"]
bg_color = Color(0.933333, 0, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oetkc"]
bg_color = Color(0.933333, 0, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n35mp"]
bg_color = Color(0.788235, 0.815686, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21bpf"]
bg_color = Color(0.788235, 0.815686, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qgrx"]
bg_color = Color(0.662745, 0.505882, 0.909804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_olta7"]
bg_color = Color(0.662745, 0.505882, 0.909804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7o4n"]
bg_color = Color(0.662745, 0.505882, 0.909804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0hdx"]
bg_color = Color(0.662305, 0.504238, 0.909281, 1)

[node name="TriviaSolitario" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxdw0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = -1.0
offset_right = 852.0
offset_bottom = 641.0
texture = ExtResource("2_hpyik")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 144.0
offset_top = 120.0
offset_right = 720.0
offset_bottom = 267.0
theme_override_fonts/font = ExtResource("3_1pvm4")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Boton0" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.006
offset_left = 112.0
offset_top = 344.0
offset_right = 432.0
offset_bottom = 476.112
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_1pvm4")
theme_override_styles/normal = SubResource("StyleBoxFlat_3sqw1")
autowrap_mode = 3

[node name="Boton1" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 344.0
offset_right = 760.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_ubjj7")
theme_override_styles/normal = SubResource("StyleBoxFlat_y30uc")
autowrap_mode = 3

[node name="Boton2" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 488.0
offset_right = 432.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_bt4b1")
theme_override_styles/normal = SubResource("StyleBoxFlat_oetkc")
autowrap_mode = 3

[node name="Boton3" type="Button" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 488.0
offset_right = 760.0
offset_bottom = 624.0
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_n35mp")
theme_override_styles/normal = SubResource("StyleBoxFlat_21bpf")
autowrap_mode = 3

[node name="Boton4" type="Button" parent="."]
layout_mode = 0
offset_left = 678.0
offset_top = 35.0
offset_right = 817.0
offset_bottom = 83.0
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_styles/hover = SubResource("StyleBoxFlat_8qgrx")
theme_override_styles/normal = SubResource("StyleBoxFlat_olta7")

[node name="CorrectAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3sqw1")

[node name="Mensaje" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.173
anchor_bottom = 0.213
offset_left = 360.0
offset_top = 264.0
offset_right = 446.642
offset_bottom = 183.976

[node name="Boton5" type="Button" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 416.0
offset_right = 556.0
offset_bottom = 517.0
theme_override_fonts/font = ExtResource("3_1pvm4")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_y7o4n")
theme_override_styles/normal = SubResource("StyleBoxFlat_r0hdx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_012mi")
autoplay = true
parameters/looping = true

[node name="ErrorAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3sqw1")
